fixed wrapping issue

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -7,7 +7,7 @@
     padding: 10px;
     box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
     min-height: 750px;
-    width:100%;
+    //width:100%;
 
     .preview-page-break {
       padding: 5px 0;
@@ -223,7 +223,7 @@
   }
 
   .react-form-builder-toolbar {
-    width: 100%;
+    //width: 100%;
     background: #fff;
     margin-top: -30px;
 
@@ -318,7 +318,7 @@
         color: #fff;
       }
 
-      width: 100%;
+      //width: 100%;
       position: fixed;
       z-index: 900;
       bottom: -320px;
@@ -406,7 +406,7 @@
 }
 
 .form-place-holder {
-  margin:10px; 
+  margin:10px;
   border:2px dashed #bbb;
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
